Update README and submission configuration for clarity and consistency

--- a/submissions/fei_earlybirds/submission.min.yaml
+++ b/submissions/fei_earlybirds/submission.min.yaml
@@ -1,6 +1,6 @@
 team: "Fei"
 members:
-  - github: "brickhu"
+  - github: "@brickhu"
 project: "EarlyBirds"
 track: "DeFi | Community | Social | Lifestyle"
 summary: "A decentralized check-in community permanently running on , helping you rise early and earn $WORM on-chain."
