--- a/submissions/fei_earlybirds/submission.min.yaml
+++ b/submissions/fei_earlybirds/submission.min.yaml
@@ -3,7 +3,7 @@ members:
   - github: "@brickhu"
 project: "EarlyBirds"
 track: "DeFi | Community | Social | Lifestyle"
-summary: "A decentralized check-in community permanently running on , helping you rise early and earn $WORM on-chain."
+summary: "A decentralized check-in community permanently running on AO, helping you rise early and earn $WORM on-chain."
 how_to_run: "简述启动命令或指向 README"
 demo_links:
   - "https://earlybirds-day.vercel.app"
